added user story one to four
User story 1
As a user i want an overview of a lot of emoji's.

User story 2
As a user i want search for an emojii to find a specific emoji.

User story 3
As a user i want to click on an emoji to copy it to my clipboard.

User story 4
As a user i want to select a category of emoji's.

--- a/main.css
+++ b/main.css
@@ -1,3 +1,35 @@
+
 body {
     font-family: 'Montserrat', sans-serif;
+}
+ul{
+	list-style-type: none;
+}
+
+.emojiList{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.emojiList li{
+	width: 100px;
+	height: 100px;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.emojiList li:hover{
+	background-color: #D3D3D3;
+}
+
+.emojiList li span{
+	display: block;
+}
+
+.emoji{
+	font-size: 24px;
+}
+
+.emojiName{
+	font-size: 12px;
 }
