added user story 5: It should be possible to add an emoji as favourite
created function for save emojis in local storage. 
loaded local storage first in fetch time.
changed render function to render favourite emojis as well.

--- a/main.css
+++ b/main.css
@@ -7,22 +7,27 @@ ul{
 }
 
 .emojiList{
+    height: 50%;
+    overflow: auto;
+}
+
+ul{
 	display: flex;
 	flex-wrap: wrap;
 }
 
-.emojiList li{
+li{
 	width: 100px;
 	height: 100px;
 	text-align: center;
 	vertical-align: middle;
 }
 
-.emojiList li:hover{
+li:hover{
 	background-color: #D3D3D3;
 }
 
-.emojiList li span{
+li span{
 	display: block;
 }
 
