--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -66,7 +66,9 @@ header .title {
 .content {
   position: relative;
   display: flex;
-  margin-top: 2rem;
+  flex-direction: row;
+  margin-top: 3rem;
+  background-color: #e8d714;
   width: 70%;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 }
@@ -90,7 +92,7 @@ header .title {
   height: 100%;
 }
 #search-input {
-  width: 100%;
+  width: 70%;
   border: 3px solid #e8d714;
   padding: 5px;
   height: 36px;
@@ -175,27 +177,23 @@ li:hover {
 /* ----------------------- */
 /* MEDIA STYLES */
 /* for phone screen */
-@media (max-width: 600px){
-  header{
+@media (max-width: 600px) {
+  header {
     background-repeat: no-repeat;
     background-size: contain;
     height: 25%;
   }
-  header .title{
+  header .title {
     font-size: 55px;
   }
-  .content{
-    flex-direction: column;
-    margin-top: 3rem;
-  }
-  #search-input{
+  #search-input {
     border: 0px solid #e8d714;
   }
-  li{
+  li {
     width: 50px;
     height: 50px;
   }
-  .emojiName{
+  .emojiName {
     display: none;
   }
 }
