--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -16,12 +16,12 @@ CONTENTS:
 
 /* ----------------------- */
 /* GENERAL STYLES */
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900");
+/* @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900"); */
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
+  /* -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box; */
   box-sizing: border-box;
 }
 
